--- a/lung.ipynb
+++ b/lung.ipynb
@@ -1551,6 +1551,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KeysView(NpzFile 'C:\\\\Users\\\\rcremese\\\\OneDrive - Institut Pasteur Paris\\\\Bureau\\\\Projects\\\\napari-potential-field-navigation\\\\paper_solutions\\\\l2_optim_solution' with keys: image, goal, init_positions, astar_path, scalar_field...)\n",
+      "(462, 139, 235)\n",
+      "[[687.11999512 151.09898798  -4.61958353]]\n",
+      "[[817.61999512 124.65221344  -7.02033041]]\n",
+      "[[118  84  63]\n",
+      " [118  83  63]\n",
+      " [118  82  63]\n",
+      " ...\n",
+      " [459  55 130]\n",
+      " [460  55 130]\n",
+      " [461  55 130]]\n",
+      "(462, 139, 235)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "path = Path('paper_solutions/l2_optim_solution').resolve(strict=True)\n",
+    "with np.load(path) as data:\n",
+    "    print(data.keys())\n",
+    "    print(data['image'].shape)\n",
+    "    print(data['goal'])\n",
+    "    print(data['init_positions'])\n",
+    "    print(data['astar_path'])\n",
+    "    print(data['scalar_field'].shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1573,7 +1610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
