Integration des APFs dans les méthodes d'initialisation

--- a/lung.ipynb
+++ b/lung.ipynb
@@ -1558,13 +1558,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KeysView(NpzFile 'C:\\\\Users\\\\rcremese\\\\OneDrive - Institut Pasteur Paris\\\\Bureau\\\\Projects\\\\napari-potential-field-navigation\\\\paper_solutions\\\\l2_optim_solution' with keys: image, goal, init_positions, astar_path, scalar_field...)\n",
+      "KeysView(NpzFile 'C:\\\\Users\\\\rcremese\\\\OneDrive - Institut Pasteur Paris\\\\Bureau\\\\Projects\\\\napari-potential-field-navigation\\\\paper_solutions\\\\l2_optim_solution.npz' with keys: image, goal, init_positions, astar_path, scalar_field...)\n",
       "(462, 139, 235)\n",
-      "[[687.11999512 151.09898798  -4.61958353]]\n",
-      "[[817.61999512 124.65221344  -7.02033041]]\n",
-      "[[118  84  63]\n",
-      " [118  83  63]\n",
-      " [118  82  63]\n",
+      "[188.          87.6925429  140.88837089]\n",
+      "[461.          55.24092271 129.98927516]\n",
+      "[[124 112  27]\n",
+      " [124 112  28]\n",
+      " [124 111  28]\n",
       " ...\n",
       " [459  55 130]\n",
       " [460  55 130]\n",
@@ -1576,14 +1576,67 @@
    "source": [
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "path = Path('paper_solutions/l2_optim_solution').resolve(strict=True)\n",
+    "path = Path('paper_solutions/l2_optim_solution.npz').resolve(strict=True)\n",
     "with np.load(path) as data:\n",
     "    print(data.keys())\n",
     "    print(data['image'].shape)\n",
     "    print(data['goal'])\n",
     "    print(data['init_positions'])\n",
     "    print(data['astar_path'])\n",
-    "    print(data['scalar_field'].shape)\n"
+    "    print(data['scalar_field'].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a :  [[-- 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0]\n",
+      " [1.0 -- 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0]\n",
+      " [1.0 1.0 -- 1.0 1.0 1.0 1.0 1.0 1.0 1.0]\n",
+      " [1.0 1.0 1.0 -- 1.0 1.0 1.0 1.0 1.0 1.0]\n",
+      " [1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0 1.0 1.0]\n",
+      " [1.0 1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0 1.0]\n",
+      " [1.0 1.0 1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0]\n",
+      " [1.0 1.0 1.0 1.0 1.0 1.0 1.0 -- 1.0 1.0]\n",
+      " [1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 -- 1.0]\n",
+      " [1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 --]]\n",
+      "b :  [[-- 1.0 -- 1.0 -- 1.0 1.0 -- 1.0 1.0]\n",
+      " [1.0 -- 1.0 -- 1.0 -- 1.0 -- -- 1.0]\n",
+      " [-- 1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0 --]\n",
+      " [-- -- 1.0 -- -- 1.0 -- -- -- --]\n",
+      " [-- -- -- -- -- 1.0 1.0 1.0 -- 1.0]\n",
+      " [1.0 1.0 1.0 -- -- 1.0 1.0 1.0 1.0 --]\n",
+      " [1.0 -- -- 1.0 1.0 -- 1.0 1.0 -- 1.0]\n",
+      " [1.0 -- 1.0 -- -- 1.0 -- -- -- 1.0]\n",
+      " [1.0 1.0 -- 1.0 -- -- -- -- 1.0 1.0]\n",
+      " [-- -- 1.0 1.0 1.0 1.0 -- -- 1.0 --]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (51,) (10,10) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma : \u001b[39m\u001b[38;5;124m\"\u001b[39m, a)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb : \u001b[39m\u001b[38;5;124m\"\u001b[39m, b)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma + b : \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m~\u001b[39;49m\u001b[43mb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmask\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m)        \n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\napari-env\\lib\\site-packages\\numpy\\ma\\core.py:4217\u001b[0m, in \u001b[0;36mMaskedArray.__add__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m   4215\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_delegate_binop(other):\n\u001b[0;32m   4216\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[1;32m-> 4217\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32md:\\anaconda3\\envs\\napari-env\\lib\\site-packages\\numpy\\ma\\core.py:1020\u001b[0m, in \u001b[0;36m_MaskedBinaryOperation.__call__\u001b[1;34m(self, a, b, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1018\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m np\u001b[38;5;241m.\u001b[39merrstate():\n\u001b[0;32m   1019\u001b[0m     np\u001b[38;5;241m.\u001b[39mseterr(divide\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m, invalid\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m-> 1020\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf(da, db, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1021\u001b[0m \u001b[38;5;66;03m# Get the mask for the result\u001b[39;00m\n\u001b[0;32m   1022\u001b[0m (ma, mb) \u001b[38;5;241m=\u001b[39m (getmask(a), getmask(b))\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (51,) (10,10) "
+     ]
+    }
+   ],
+   "source": [
+    "a= np.ma.MaskedArray(np.ones((10,10)), mask=np.eye(10, dtype=bool))\n",
+    "b = np.ma.MaskedArray(np.ones((10,10)), mask=np.random.rand(10,10) > 0.5)\n",
+    "print(\"a : \", a)\n",
+    "print(\"b : \", b)\n",
+    "print(\"a + b : \", a[~b.mask] + b)        "
    ]
   },
   {
