--- a/lung.ipynb
+++ b/lung.ipynb
@@ -1588,55 +1588,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a :  [[-- 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0]\n",
-      " [1.0 -- 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0]\n",
-      " [1.0 1.0 -- 1.0 1.0 1.0 1.0 1.0 1.0 1.0]\n",
-      " [1.0 1.0 1.0 -- 1.0 1.0 1.0 1.0 1.0 1.0]\n",
-      " [1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0 1.0 1.0]\n",
-      " [1.0 1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0 1.0]\n",
-      " [1.0 1.0 1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0]\n",
-      " [1.0 1.0 1.0 1.0 1.0 1.0 1.0 -- 1.0 1.0]\n",
-      " [1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 -- 1.0]\n",
-      " [1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 --]]\n",
-      "b :  [[-- 1.0 -- 1.0 -- 1.0 1.0 -- 1.0 1.0]\n",
-      " [1.0 -- 1.0 -- 1.0 -- 1.0 -- -- 1.0]\n",
-      " [-- 1.0 1.0 1.0 1.0 -- 1.0 1.0 1.0 --]\n",
-      " [-- -- 1.0 -- -- 1.0 -- -- -- --]\n",
-      " [-- -- -- -- -- 1.0 1.0 1.0 -- 1.0]\n",
-      " [1.0 1.0 1.0 -- -- 1.0 1.0 1.0 1.0 --]\n",
-      " [1.0 -- -- 1.0 1.0 -- 1.0 1.0 -- 1.0]\n",
-      " [1.0 -- 1.0 -- -- 1.0 -- -- -- 1.0]\n",
-      " [1.0 1.0 -- 1.0 -- -- -- -- 1.0 1.0]\n",
-      " [-- -- 1.0 1.0 1.0 1.0 -- -- 1.0 --]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (51,) (10,10) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma : \u001b[39m\u001b[38;5;124m\"\u001b[39m, a)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb : \u001b[39m\u001b[38;5;124m\"\u001b[39m, b)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma + b : \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m~\u001b[39;49m\u001b[43mb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmask\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m)        \n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\napari-env\\lib\\site-packages\\numpy\\ma\\core.py:4217\u001b[0m, in \u001b[0;36mMaskedArray.__add__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m   4215\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_delegate_binop(other):\n\u001b[0;32m   4216\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n\u001b[1;32m-> 4217\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mother\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\anaconda3\\envs\\napari-env\\lib\\site-packages\\numpy\\ma\\core.py:1020\u001b[0m, in \u001b[0;36m_MaskedBinaryOperation.__call__\u001b[1;34m(self, a, b, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1018\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m np\u001b[38;5;241m.\u001b[39merrstate():\n\u001b[0;32m   1019\u001b[0m     np\u001b[38;5;241m.\u001b[39mseterr(divide\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m, invalid\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m-> 1020\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf(da, db, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1021\u001b[0m \u001b[38;5;66;03m# Get the mask for the result\u001b[39;00m\n\u001b[0;32m   1022\u001b[0m (ma, mb) \u001b[38;5;241m=\u001b[39m (getmask(a), getmask(b))\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (51,) (10,10) "
+      "Bending of the trajectory using arctan method: 135.0\n"
      ]
     }
    ],
    "source": [
-    "a= np.ma.MaskedArray(np.ones((10,10)), mask=np.eye(10, dtype=bool))\n",
-    "b = np.ma.MaskedArray(np.ones((10,10)), mask=np.random.rand(10,10) > 0.5)\n",
-    "print(\"a : \", a)\n",
-    "print(\"b : \", b)\n",
-    "print(\"a + b : \", a[~b.mask] + b)        "
+    "import numpy as np\n",
+    "\n",
+    "def calculate_bending_arctan(data):\n",
+    "    # Convert the data into numpy array for easier manipulation\n",
+    "    points = np.array(data)\n",
+    "    \n",
+    "    # Calculate vectors between consecutive points\n",
+    "    vectors = points[1:] - points[:-1]\n",
+    "    \n",
+    "    # Calculate vectors between consecutive vectors\n",
+    "    vectors_diff = vectors[1:] - vectors[:-1]\n",
+    "    \n",
+    "    # Calculate the norms of consecutive vectors\n",
+    "    norms_v = np.linalg.norm(vectors[:-1], axis=1)\n",
+    "    norms_v_diff = np.linalg.norm(vectors_diff, axis=1)\n",
+    "    \n",
+    "    # Calculate the dot product of consecutive vectors\n",
+    "    dot_products = np.sum(vectors[:-1] * vectors_diff, axis=1)\n",
+    "    \n",
+    "    # Calculate the bending angles using the arctan method\n",
+    "    bending_angles = np.arctan2(norms_v_diff, dot_products) * (180 / np.pi)\n",
+    "    \n",
+    "    # Calculate the total bending\n",
+    "    bending = np.sum(bending_angles)\n",
+    "    \n",
+    "    return bending\n",
+    "\n",
+    "# Example usage\n",
+    "data = [(0, 0, 0), (1, 1, 1), (2, 2, 2), (3, 1, 3)]\n",
+    "bending = calculate_bending_arctan(data)\n",
+    "print(\"Bending of the trajectory using arctan method:\", bending)"
    ]
   },
   {
